--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 uname=root
 upass=123456
-url=jdbc:mysql://localhost:3306/shadow
+url=jdbc:mysql://localhost:3306/logistics
 driver_Class=com.mysql.jdbc.Driver
 
 initPoolSize=5
